--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,7 @@ body, h1, button {
 
   .featured-article .article-image {
     margin-bottom: 16px;
+    display: none;
   }
   .article:not(.featured-article) {
     flex-direction: row; /* Side-by-side layout on mobile for regular articles */
@@ -355,6 +356,7 @@ body, h1, button {
       width: 120px;
       height: 120px;
       margin-left: 16px;
+      display: flex; 
     }
 
     .featured-article .article-header {
@@ -369,6 +371,7 @@ body, h1, button {
       width: 120px; /* Larger images for desktop */
       height: 120px;
       border-radius: 8px;
+      display: flex; 
     }
     
   }
