--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,7 @@ body, h1, button {
       width: 120px;
       height: 120px;
       margin-left: 16px;
-      display: flex; 
+      display:flex
     }
 
     .featured-article .article-header {
@@ -371,15 +371,6 @@ body, h1, button {
       width: 120px; /* Larger images for desktop */
       height: 120px;
       border-radius: 8px;
-      display: flex; 
     }
     
   }
-
-
-
-
-
-
-
-  
